--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 # API Connection
 GRAPHQL_HOST=https://localhost:3000/graphql
 GRAPHQL_TOKEN=your_token
+
+# Mapbox
+NEXT_PUBLIC_MAPBOX_API_KEY=your_api_key
+NEXT_PUBLIC_MAPBOX_USERID=your_user_id
+NEXT_PUBLIC_MAPBOX_STYLEID=your_style_id
